# django-utils-plus

./: .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  fabfile.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  scent.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
test_app/: models.py  urls.py
test_proj/: settings.py  urls.py  wsgi.py
tests/: conftest.py  test_choices.py  test_commands.py  test_mixins.py  test_models.py  test_query_manager.py  test_router.py  test_template_tags.py
tests/test_app/: choices.py  models.py  package-lock.json  package.json  settings.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py  0002_author_title.py  0002_book.py
utils_plus/: __init__.py  abstracts.py  apps.py  choices.py  fields.py  middleware.py  mixins.py  models.py  router.py  url_group.py  url_group_test.py  utils.py  views.py
utils_plus/management/commands/: clear_records.py  cleardata.py  create_admin.py  create_middleware.py  test_mail.py
utils_plus/templatetags/: utils_plus_tags.py
utils_plus/tests/: test_query_manager.py  test_router.py
utils_plus/utils/: __init__.py  html.py  misc.py  npm.py
utils_plus/views/: __init__.py  misc.py  mulitform_view.py  multi_form_view.py
