[project.optional-dependencies]
dev = [
    "invoke",
    "tox",
]
test = [
    "pytest-django",
    "pytest-pythonpath",
    "pytest-cov",
    "django_dynamic_fixture",
]
lint = [
    "pylint",
    "pylint-django",
    "django-stubs",
    "mypy",
    "black",
]

[tool.pdm.build]
includes = ["utils_plus"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    { name = "jnoortheen", email = "jnoortheen@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "django>=2.2",
]
name = "django-utils-plus"
version = "0.7.4"
description = "A reusable Django app with small set of utilities for urls, viewsets, commands and more"
readme = "README.md"
classifiers = ["Environment :: Web Environment", "Framework :: Django", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3", "Topic :: Internet :: WWW/HTTP", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Utilities", "Topic :: Software Development :: Libraries", "Topic :: Software Development :: Libraries :: Python Modules"]

[project.urls]
homepage = "https://github.com/jnoortheen/django-utils-plus"
repository = "https://github.com/jnoortheen/django-utils-plus"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
